[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pso"
version = "0.1.0"
description = "A Particle Swarm Optimization package"
authors = ["Paula Isabella Moreno, Juan Sebastián Rueda, Santiago Rocha <srochap@unal.edu.co>"]
readme = "README.md"
repository = "https://github.com/Unbo10/ParticleSwarmOptimization"

[tool.poetry.dependencies]
python = "^3.6"
pandas = "*"
numpy = "*"
openpyxl = "*"
xlsxwriter = "*"
setuptools = ">=61.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run = "pso.main:run"

[build]
exclude = ["examples/**", "tools/**"]