[metadata]
name = pso
version = 0.1
author = Paula Isabella Moreno, Juan Sebastián Rueda, Santiago Rocha
author_email = srochap@unal.edu.co
description = A Particle Swarm Optimization package
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
python_requires = >=3.6
install_requires =
    # requests
    # importlib-metadata; python_version<"3.10"
    numpy

[options.package_data]
* = *.md

# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    tools*
    docs*